<resources>
    <string name="app_name">Test Application</string>
    <string name="scanButton">SCAN NOW</string>
    <string name="dashboard">Dashboard</string>
    <string name="summaryText">Latest Scan Results</string>
    <string name="numDefects">Detected Defects</string>
    <string name="typesOfDefects">Types of Defects</string>
    <string name="homeButton">Dashboard</string>
    <string name="mappingButton">Mapping</string>
    <string name="historyButton">History</string>
</resources>